--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires      = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "object-diff"
+name = "objectdiff"
 version = "0.1.0"
 description = "Generate diffs on lists of objects"
 readme = "README.md"
