--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ requires      = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "objectdiff"
-version = "0.1.1"
+name = "listdiffer"
+version = "0.1.2"
 description = "Generate diffs on lists of objects"
 readme = "README.md"
 authors = [{ name = "Jacob Reimers", email = "pypi@reimers.io" }]
