--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,11 @@
-# pyproject.toml
-
 [build-system]
-requires      = ["setuptools>=61.0.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "listdiffer"
-version = "0.2.0"
-description = "Generate diffs on lists of objects"
+version = "0.0.0"
+description = "Generate diffs on lists of numbers, bytes or objects"
 readme = "README.md"
 authors = [{ name = "Jacob Reimers", email = "pypi@reimers.io" }]
 license = { file = "LICENSE" }
@@ -16,17 +14,19 @@ classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
 ]
-keywords = ["lcs", "diff", "delta"]
-dependencies = [
-    'typing > 3.0.0',
-    'tomli; python_version >= "3.8"',
-]
+keywords = ["lcs", "diff", "delta", "patch"]
+urls = { Homepage = "https://github.com/jjrdk/listdiffer" }
 requires-python = ">=3.8"
+
+[tool.poetry]
+packages = [
+    { include = "listdiffer", from = "src" }
+]
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3"
 
 [project.optional-dependencies]
 dev = ["pip-tools", "pytest"]
-
-[project.urls]
-Homepage = "https://github.com/jjrdk/listdiffer"
 
 [project.scripts]
